# agent-runtimes

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  agent.html  examples.html  hatch_build.py  netlify.toml  package.json  pyproject.toml  typedoc.json  vite.config.ts  vitest.shims.d.ts
.github/: copilot-instructions.md
.github/workflows/: build.yml  deploy-docs.yml  py-tests.yml  reusable-typescript.yml  ts-code-style.yml  ts-tests.yml  ts-typing.yml
agent_runtimes/: __init__.py  __main__.py  __version__.py  app.py  otel.py
agent_runtimes/_pydoc/: __init__.py  replace_processor.py  replace_renderer.py
agent_runtimes/adapters/: __init__.py  base.py  jupyter_ai_adapter.py  langchain_adapter.py  pydantic_ai_adapter.py
agent_runtimes/capabilities/: __init__.py  cost_monitoring.py  factory.py  graph_telemetry.py  guardrails.py  llm_context_usage.py  monitoring.py  otel.py  tool_approval.py
agent_runtimes/chat/: banner.py  cli.py  tux.py
agent_runtimes/checkpoints/: __init__.py  config.py  middleware.py  store.py  tools.py
agent_runtimes/commands/: __init__.py  agent_mcp_servers.py  list_agents.py  list_specs.py  mcp_servers_catalog.py  mcp_servers_config.py  serve.py
agent_runtimes/config/: __init__.py  agents.py  envvars.py  frontend_config.py  skills.py
agent_runtimes/context/: __init__.py  costs.py  eviction.py  history_archive.py  identities.py  optimizer.py  session.py  summarization.py  usage.py  window_config.py  window_manager.py
agent_runtimes/delegation/: __init__.py  delegate.py
agent_runtimes/durable/: __init__.py  config.py  lifecycle.py  wrapper.py
agent_runtimes/evals/: __init__.py  report.py  routes.py  runner.py  spec_adapter.py
agent_runtimes/events/: __init__.py
agent_runtimes/examples/: __init__.py
agent_runtimes/guardrails/: __init__.py  base.py  common.py  content_safety.py  cost_budget.py  data_scope.py  execution_hooks.py  input_output_safety.py  mcp_tools.py  permissions.py  pipeline.py  registry.py  skills.py  token_limit.py  tool_access.py  tool_approval.py  tool_approvals.py  tools.py  usage_limits.py
agent_runtimes/hooks/: __init__.py  base.py  middleware.py  registry.py
agent_runtimes/integrations/: __init__.py  codemode.py
agent_runtimes/invoker/: __init__.py  base.py  once.py  registry.py
agent_runtimes/jupyter/: agent.py  config.py  serverapplication.py
agent_runtimes/mcp/: __init__.py  catalog_mcp_servers.py  config_mcp_servers.py  lifecycle.py  toolsets.py
agent_runtimes/memory/: __init__.py  base.py  ephemeral.py  mem0_backend.py  registry.py
agent_runtimes/models/: models.py
agent_runtimes/monitoring/: __init__.py  cost_monitoring.py  graph_telemetry.py  otel.py
agent_runtimes/observability/: __init__.py  config.py  prompt_turn_metrics.py  storage.py
agent_runtimes/otel/: __init__.py  prompt_turn_metrics.py  tracer.py
agent_runtimes/output/: __init__.py  base.py  pdf_generator.py  registry.py
agent_runtimes/routes/: __init__.py  a2a.py  a2ui.py  acp.py  agents.py  agui.py  configure.py  examples.py  health.py  history.py  identity.py  mcp.py  mcp_proxy.py  mcp_ui.py  skills.py  tool_approvals.py  tool_approvals_listener.py  vercel_ai.py
agent_runtimes/services/: __init__.py  agent_factory.py  code_sandbox_manager.py  runtime_tools.py  skills_area.py
agent_runtimes/specs/: __init__.py  envvars.py  evals.py  events.py  frontend_tools.py  guardrails.py  memory.py  models.py  notifications.py  outputs.py  personas.py  skills.py  tools.py  triggers.py
agent_runtimes/streams/: __init__.py  loop.py  messages.py
agent_runtimes/templates/: index.html
agent_runtimes/tests/: test_agents_create_integration.py  test_agents_trigger_run.py  test_cli.py  test_codemode_config.py  test_cost_monitoring_capability.py  test_mcp_tools_guardrail_codemode_execute_code.py  test_pydantic_ai_adapter_codemode_toggle.py  test_pydantic_ai_adapter_deferred_approval.py  test_sandbox_interrupt.py  test_skills_guardrail_enabled_checks.py  test_skills_prompt.py  test_streams_selection_state.py  test_tools_guardrail_deferred_inline.py
agent_runtimes/transports/: __init__.py  a2a.py  acp.py  agui.py  base.py  mcp_ui.py  vercel_ai.py
agent_runtimes/triggers/: __init__.py  cron.py  webhook.py
agent_runtimes/types/: __init__.py  types.py
dev/config/: jupyter_server_config.py
docs/: README.md  docusaurus.config.js  package.json
docs/docs/: index.mdx
examples/: README.md
examples/agent-codemode/: README.md  agent_cli.py  agent_cli_config.example.json  example_mcp_server.py
examples/skills-codemode/: README.md  skills_codemode_example.py
html/: agent-lexical.html  agent-notebook.html  agent.html  examples.html  index.html
reference/: ARCHITECTURE.md  MCP_UI_GUIDE.md  PROTOCOL_SWITCHING_IMPLEMENTATION.md  TESTING_MCP_UI.md  VERCEL_AI_AGUI_GUIDE.md
scripts/: apply-patches.sh  download-ai-elements.py  sync-jupyter.sh
scripts/codegen/: generate_agents.py  generate_envvars.py  generate_evals.py  generate_events.py  generate_frontend_tools.py  generate_guardrails.py  generate_mcp_servers.py  generate_memory.py  generate_models.py  generate_notifications.py  generate_outputs.py  generate_personas.py  generate_skills.py  generate_teams.py  generate_tools.py  generate_triggers.py  versioning.py
skills/: README.md
skills/crawl/: SKILL.md
skills/github/: SKILL.md
skills/jokes/: SKILL.md
specs/: README.md  agent-spec.schema.yaml
specs/agents/: crawler-mcp.yaml  crawler.yaml  data-acquisition.yaml  financial-viz.yaml  financial.yaml  github-agent-mcp.yaml  github-agent.yaml  information-routing.yaml  simple.yaml
specs/mcp-servers/: alphavantage.yaml  chart.yaml  filesystem.yaml  github.yaml  google-workspace.yaml  kaggle.yaml  slack.yaml  tavily.yaml
specs/skills/: crawl.yaml  github.yaml  pdf.yaml
src/: Agent.tsx  AgentLexical.tsx  AgentNotebook.tsx  App.tsx  agent-lexical-main.tsx  agent-main.tsx  agent-notebook-main.tsx  index.ts  test-setup.ts  types.ts
src/__tests__/: hooks.test.ts
src/agents/: AgentDetails.tsx
src/api/: agents.ts  context.ts  (+8 more)
style/: primer-primitives.css
(+427 files in other folders)
